chore: jvm arguments for app and misc refactorings